a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shivan_sahib/repeat_decl.min
var x : string;
var x : float;

read x;

